<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.marcin.jasi.littleandroidapp.details.presentation.viewModel.PercentageItemViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/photos_list_image_margin"
        android:background="@color/details_list_row_background_color">

        <Button
            android:id="@+id/left_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/details_row_buttons_height"
            android:text="@string/details_left_row_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/center_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/center_button"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:text="@string/details_center_row_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintLeft_toRightOf="@+id/left_button"
            app:layout_constraintRight_toLeftOf="@+id/right_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/right_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/details_row_buttons_height"
            android:text="@string/details_right_row_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0.2"
            app:layout_constraintLeft_toRightOf="@+id/center_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>
